# marl-dreamer

./: .gitignore  Makefile  Project Summary.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
configs/: env_mpe.yaml  env_mpe_simple_spread.yaml
src/: buffer.py  config.yaml  env.py  ideas.md  main.py  models.py  train.py  wm_training.tex
src/agents/: README.md  mappo-agent.py  random-agent.py
src/agents/dreamer/: losses.py  rssm.py
src/agents/dreamer-tom/: algorithm.py  algorithm1.py  algorithm_best.py  readme.md
src/agents/ippo/: actor.py  critic.py  loss.py
src/agents/mappo/: actor.py  actor_critic.py  critic.py  loss.py
src/envs/: README.md  jaxmarl_wrapper.py  mpe_wrapper.py  utils.py
src/eval/: README.md
src/notebooks/: JaxMARL_Walkthrough.ipynb
src/train/: README.md  run.py  run_mpe.py  train.py  utils.py
src/world_model/: README.md  __init__.py  decoder.py  encoder.py  imagine.py  rssm.py  world_model.py
