[project]
name = "marl-dreamer"
version = "0.1.0"
description = "Dreamer-like world models for multi-agent reinforcement learning"
authors = [
    {name = "Tomas",email = "134088120+Tomas-Stone@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
package-mode = false
dependencies = [
    "torch (==2.1.0)",
    "pettingzoo[mpe] (>=1.25.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

